<resources xmlns:ns0="http://schemas.android.com/tools" ns0:ignore="MissingTranslation">
<string name="app_name">Sank VPN</string>
    <string name="navigation_drawer_open">tiroir ouvert</string>
    <string name="navigation_drawer_close">fermeture de tiroir</string>
    <string name="vpn_process">31674741</string>
    <string name="connection_close_confirm">Souhaitez-vous annuler la connexion VPN actuelle?</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
    <string name="isRTL">Non</string>
    <string name="vip_price_month">1000 FCFA</string>
    <string name="vip_price_3month">2 500 FCFA</string>
    <string name="vip_price_6month">4 000 FCFA</string>
    <string name="vip_price_12month">7 500 FCFA</string>
    <string name="admob_app_id">ca-app-pub-5819134317431478~9720884296</string>
    <string name="facebook_app_id">xxxxxxxxxxxxx</string>
    <string name="fb_login_protocol_scheme">xxxxxxxxxxxxxxx</string>
    <string name="play_more_app">https://play.google.com/store/apps/developer?id=Notre vision</string>
    <string name="home">Accueil</string>
    <string name="profile">Profil</string>
    <string name="edit_profile">Editer le profil</string>
    <string name="upload_quotes">upload quotes</string>
    <string name="upload_image">Télécharger une image</string>
    <string name="upload_gif">Téléchargez le GIF</string>
    <string name="upload_video">Télécharger une video</string>
    <string name="my_video">Ma vidéo</string>
    <string name="reward">Récompense</string>
    <string name="reference_code">Code de référence</string>
    <string name="earn_point">Gagnez des points</string>
    <string name="rate_app">Avis</string>
    <string name="banner_premium_packages">Adhésion Premium</string>
    <string name="banner_description">Avec le forfait Premium et profitez des serveurs les plus rapides au monde.</string>
    <string name="more_app">Plus d\'application</string>
    <string name="share_app">Partager l\'application</string>
    <string name="about_us">À propos de nous</string>
    <string name="privacy_policy">Politique de confidentialité</string>
    <string name="setting">Réglages</string>
    <string name="contact_us">Nous contacter</string>
    <string name="faq">FAQ</string>
    <string name="login">Se connecter ou se déconnecter</string>
    <string name="app_name_about_us">aBcd</string>
    <string name="about_us_version">Version</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_Company">Société</string>
    <string name="about_us_company_name">a B c d</string>
    <string name="about_us_email">E-mail</string>
    <string name="about_us_email_text">abcd@abcd.com</string>
    <string name="about_us_website">Site Internet</string>
    <string name="about_us_website_text">www.abcd.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">1234567890</string>
    <string name="about_us_about">A propos de nous</string>
    <string name="ok">d\'accord</string>
    <string name="save_profile">SAUVER</string>
    <string name="loading">Chargement....</string>
    <string name="no_data_found">Aucune donnée disponible</string>
    <string name="failed_try_again">Échec, essayez à nouveau</string>
    <string name="you_have_not_login">Vous n\'êtes pas connecté</string>
    <string name="logout_message">Êtes-vous sûr de vouloir vous déconnecter</string>
    <string name="wrong">Une erreur s\'est produite, veuillez réessayer plus tard</string>
    <string name="internet_connection">Connexion Internet non disponible</string>
    <string name="Please_click_BACK_again_to_exit">Veuillez cliquer à nouveau sur RETOUR pour quitter</string>
    <string name="Let_me_recommend_you_this_application">Laissez-moi vous recommander cette application</string>
    <string name="cannot_use_save_permission">Impossible d\'utiliser le partage, le téléchargement et le téléchargement futur de l\'autorisation de stockage</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.</string>
    <string name="skip">Sauter</string>
    <string name="got_it">J\'AI COMPRIS</string>
    <string name="welcome_title_one">Bienvenue sur Sank VPN</string>
    <string name="welcome_title_two">Points de fidélité</string>
    <string name="welcome_title_three">Serveurs à bande passante illimitée.</string>
    <string name="welcome_description_one"><![CDATA[Vous pouvez déverrouiller le site Web ou les applications restreintes(Facebook, Whatsapp, Telegram,...) et profiter des serveurs les plus rapides ]]></string>
    <string name="welcome_description_two"><![CDATA[Jouer à la Roue Chanceuse et vous avez la chance de gagner des points !! Dépêchez-vous !! ]]></string>
    <string name="welcome_description_three">Partager et gagnez des points en partageant cette application avec vos amis.</string>
    <string name="logout">Se déconnecter</string>
    <string name="email">Entrer votre Email</string>
    <string name="password">Tapez votre mot de passe</string>
    <string name="remember_me">Souviens-toi de moi</string>
    <string name="button_text_login">CONNEXION</string>
    <string name="button_text_skip">Sauter</string>
    <string name="textView_forget_password">Mot de passe oublié ?</string>
    <string name="google_login">Se connecter avec Gmail</string>
    <string name="facebook_login">Se connecter avec Facebook</string>
    <string name="dont_have_an_account">Vous n\'avez pas de compte ?</string>
    <string name="button_text_register">S\'inscrire</string>
    <string name="name">Nom</string>
    <string name="phoneNo">Téléphone</string>
    <string name="conform_password">Confirmez le mot de passe</string>
    <string name="already_have_an_account_yet">Vous avez déjà un compte ?</string>
    <string name="register_login_text">Connexion</string>
    <string name="submit">Soumettre</string>
    <string name="please_enter_name">Veuillez entrer le nom</string>
    <string name="please_enter_email">Veuillez saisir un e-mail</string>
    <string name="please_enter_password">Veuillez entrer le mot de passe</string>
    <string name="pass_confPass_match">Le mot de passe et le mot de passe de confirmation ne correspondent pas</string>
    <string name="please_enter_phone">Veuillez entrer le numéro de téléphone</string>
    <string name="please_enter_full_name">Veuillez entrer le nom complet</string>
    <string name="please_enter_message">Veuillez entrer un message</string>
    <string name="forget_password">Mot de passe oublié</string>
    <string name="forget_password_text">Entrez votre adresse e-mail ci-dessous et nous vous enverrons un e-mail avec des instructions sur la façon de changer votre mot de passe</string>
    <string name="title_verification">Entrez le code de vérification</string>
    <string name="enter_code">Entrez le code</string>
    <string name="opt_contain">Nous avons envoyé OTP sur votre e-mail</string>
    <string name="please_enter_verification_code">Veuillez entrer le code de vérification</string>
    <string name="verification_message">Le code de vérification ne correspond pas</string>
    <string name="verify">Vérifier</string>
    <string name="re_register">Inscription</string>
    <string name="resend_your_otp">Renvoyer votre OTP</string>
    <string name="click_hear">Cliquez ici</string>
    <string name="server_time_out">Expiration du serveur, veuillez réessayer en utilisant le dernier otp</string>
    <string name="value">0</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="follow">Suivre</string>
    <string name="unfollow">Suivre</string>
    <string name="following">Suivre</string>
    <string name="followers">Suivre</string>
    <string name="on_review">En révision</string>
    <string name="approved">Approuvé</string>
    <string name="not_following">Vous n\'avez aucun utilisateur suivant</string>
    <string name="not_follower">Vous n\'avez aucun utilisateur suivi</string>
    <string name="you_have_not_onFollow">Vous ne pouvez pas vous suivre</string>
    <string name="user_not_instagram_link">L\'utilisateur n\'a pas ajouté de lien de profil Instagram</string>
    <string name="user_not_youtube_link">L\'utilisateur n\'a pas ajouté de lien de profil YouTube</string>
    <string name="delete">Supprimer</string>
    <string name="delete_account">Supprimer le compte</string>
    <string name="quote_status">Statut des devis</string>
    <string name="image_status">État de l\'image</string>
    <string name="gif_status">Statut GIF</string>
    <string name="video_status">État de la vidéo</string>
    <string name="pending_point">Point en attente</string>
    <string name="delete_my_account">Supprimer mon compte</string>
    <string name="delete_des_dialog">Si vous souhaitez supprimer votre compte, la société aura besoin de votre adresse e-mail pour enquête.</string>
    <string name="language_title">Choisissez votre langue</string>
    <string name="language_des">Dans cette application, vous pouvez sélectionner votre langue la plus chère que vous voyez le statut. Si vous n\'avez pas sélectionné votre langue préférée, toutes les langues sont affichées.</string>
    <string name="copy_text">Copier le texte</string>
    <string name="tab_to_copy">Appuyez pour copier</string>
    <string name="your_reference_code">Votre code de référence</string>
    <string name="reference_code_detail">Partagez votre code de référence avec d\'autres et gagnez plus de points.</string>
    <string name="download">Télécharger</string>
    <string name="please_install_whatsapp">Veuillez installer WhatsApp</string>
    <string name="please_install_instagram">Veuillez installer Instagram</string>
    <string name="please_install_facebook">Veuillez installer Facebook</string>
    <string name="please_install_fb_messenger">Veuillez installer Facebook Messenger</string>
    <string name="please_install_twitter">Veuillez installer Twitter</string>
    <string name="you_have_not_like_video">L\'utilisateur ne peut pas aimer ses propres vidéos</string>
    <string name="you_have_already_download_video">Vous avez déjà téléchargé la vidéo</string>
    <string name="related_status">Statut associé</string>
    <string name="allcomment">Tous les commentaires</string>
    <string name="please_enter_comment">Veuillez entrer un commentaire</string>
    <string name="bottom_sheet_option_title">PARTAGE RAPIDE ET RAPPORT</string>
    <string name="report">Rapport</string>
    <string name="share_is_caring">Partager c\'est aimer</string>
    <string name="copy">Copie</string>
    <string name="copy_sub">Copier le devis</string>
    <string name="copy_qoute">Copier le devis</string>
    <string name="report_sub">Va vérifier ce qui ne va pas</string>
    <string name="copyright">droits d\'auteur</string>
    <string name="sexual">Sexuel</string>
    <string name="other">Autre</string>
    <string name="tell_us">Dites-nous</string>
    <string name="send">Envoyer</string>
    <string name="please_select_option">Veuillez sélectionner l\'option</string>
    <string name="comment">Commenter</string>
    <string name="no_comment_found">Aucun commentaire trouvé</string>
    <string name="leave_your_comment">laisse ton commentaire</string>
    <string name="delete_comment">Voulez-vous vraiment supprimer ce commentaire ?</string>
    <string name="enter_reference_code">Entrez le code de référence</string>
    <string name="please_enter_reference_code">Veuillez entrer le code de référence</string>
    <string name="enter_ref_code_des">Entrez le code de référence de votre ami pour gagner plus de points.</string>
    <string name="text_continue">Continuez</string>
    <string name="play">Jouer</string>
</resources>