<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/premiumLL"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:fontFamily="@font/campton_bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/banner_premium_packages"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:drawablePadding="10dp"
            android:fontFamily="@font/campton_bold"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:text="@string/banner_description"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="90dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#2A3875"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="1dp"
            app:cardElevation="10dp"
            android:layout_marginRight="0dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="Monthly"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textColor="#FFFFFF"
                android:textSize="22dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:text="@string/vip_price_month"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/one_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-20dp"
                android:layout_marginTop="0dp"
                android:button="@drawable/bg_checkbox"
                android:gravity="center" />




        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="90dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#2A3875"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="1dp"
            app:cardElevation="10dp"
            android:layout_marginRight="0dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="3 Month"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:text="@string/vip_price_3month"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/three_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-10dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="end"
                android:button="@drawable/bg_checkbox"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="160dp"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="90dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#2A3875"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="1dp"
            app:cardElevation="10dp"
            android:layout_marginRight="0dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="6 Month"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:text="@string/vip_price_6month"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/six_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-10dp"
                android:layout_marginTop="1dp"
                android:button="@drawable/bg_checkbox"
                android:gravity="center" />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="240dp"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="#2A3875"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="1dp"
            app:cardElevation="10dp"
            android:layout_marginRight="0dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="One Year"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:textColor="#FFFFFF"
                android:textSize="22dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:text="@string/vip_price_12month"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/one_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-10dp"
                android:layout_marginTop="1dp"
                android:button="@drawable/bg_checkbox"
                android:gravity="center" />



        </androidx.cardview.widget.CardView>


    </RelativeLayout>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toolbar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">
        <ImageView
            android:id="@+id/btnBack"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="Purchase"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="@color/cmn_white"
            android:textSize="22dp" />

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unlock Premium Servers"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" With No Ads"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>





    <androidx.cardview.widget.CardView
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:clickable="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:focusable="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_alignParentBottom="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#ff2e93"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/all_pur"
            style="@style/TextView.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/campton_bold"
            android:text="BECOME PREMIUM NOW"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:visibility="visible"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recurring Billing , Cancel Any Time on Google Play Store"
            android:textColor="@color/white"
            android:textSize="13dp" />

    </RelativeLayout>
</RelativeLayout>